added getallevents api
